# celery-singleton

./: .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini  travis.yml
celery_singleton/: __init__.py  config.py  exampleconfig.py  exceptions.py  inspect_celery.py  singleton.py  util.py
celery_singleton/backends/: __init__.py  base.py  redis.py
sample/: sample.py
tests/: conftest.py  test_backends.py  test_config.py  test_inspect_celery.py  test_singleton.py
