[tool.poetry]
name = "celery-singleton"
version = "0.2.0"
description = "Prevent duplicate celery tasks"
authors = ["Steinthor Palsson <steini90@gmail.com>"]
homepage = 'https://github.com/steinitzu/spoffy'
repository = 'https://github.com/steinitzu/spoffy'
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
celery = "^4"
redis = ">=2<=3"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
